@startuml
class Bullet {
  +move()
  +intersect(ICollider*)
  -speed : int
}

class BulletFactory {
  +createBullet(type)
}

class Controller {
  +run()
  -gameObjects : vector<GameObject*>
}

class GameObject {
  +update()
  +draw()
  -position : Vector2
}

class Vector2 {
  -x : float
  -y : float
}

class ICollider {
  +collideWith(ICollider*)
}

GameObject <|-- Bullet
Controller "1" o-- "*" GameObject
BulletFactory --> Bullet
GameObject "1" o-- "1" Vector2
Bullet "1" o-- "1" ICollider
@enduml

